# esp-idf-triton

./: Cargo.toml  README.md
src/: main.rs
src/network/: activations.rs  matrix.rs  matrix3d.rs  network.rs
src/network/layer/: conv.rs  dense.rs  layers.rs  mod.rs
src/network/serialize/: ser_layer.rs
