[package]
name = "esp-idf-triton"
version = "0.1.5"
authors = ["BradenEverson"]
description = "Embedded neural network forward feeding for precompiled models created by the triton_grow crate"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
futures = "0.3.30"
itertools = "0.12.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0"
typetag = "0.2.14"
