[package]
name = "esp-idf-triton"
version = "0.1.6"
authors = ["BradenEverson"]
description = "Embedded neural network forward feeding for precompiled models created by the triton_grow crate"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
