[package]
name = "esp-idf-unda"
version = "0.1.0"
authors = ["BradenEverson"]
description = "Embedded neural network forward feeding for precompiled models created by the unda crate"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
